# collig

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  resume.sh
.trae/documents/: coworker-ai-prd.md  coworker-ai-technical-architecture.md
backend/: agent.py  cli.py  list_sessions.py  main.py  requirements.txt  script.py  session.py  test_agent_refactor.py
backend/skills/: bookmark.py  builtins.py  chat.py  email.py  git.py  loader.py  manager.py  memory.py  news.py  profile.py  programming.py  setup.py  system.py
core/: __init__.py  agent.py  cli.py  list_sessions.py  main.py  menu.py  news_cache.py  note.txt  paths.py  session.py
docs/: PRD.md  Technical_Architecture.md
frontend/src/: App.vue  style.css
frontend/src/components/: ChatInterface.vue
skills/: base.py  bookmark.py  builtins.py  cache.py  chat.py  filesystem.py  manager.py  map.py  memory.py  menu.py  profile.py  prompt.py  setup.py  weather.py
skills/date_calculator/: __init__.py
skills/email/: __init__.py  run_test.py  test_connection.py
skills/imported/test-skill/: SKILL.md
skills/lunar_calendar/: __init__.py
skills/news/: __init__.py  test_ddgs.py
